--- a/SOURCE/LICS/BASE/MICROSOFT/ASP/ics_style.css
+++ b/SOURCE/LICS/BASE/MICROSOFT/ASP/ics_style.css
@@ -30,6 +30,11 @@ body {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;}
            BORDER-STYLE:none;
            MARGIN:0px;
            PADDING-BOTTOM:2px;PADDING-LEFT:2px;PADDING-RIGHT:2px;PADDING-TOP:2px;}
+.clsPopup {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:normal;
+           BACKGROUND-COLOR:#99ffcc;
+           BORDER-STYLE:none;
+           MARGIN:0px;
+           PADDING-BOTTOM:2px;PADDING-LEFT:2px;PADDING-RIGHT:2px;PADDING-TOP:2px;}
 .clsPanel {BACKGROUND-COLOR:transparent;
            BORDER-STYLE:none;
            MARGIN:0px;}
