--- a/SOURCE/LICS/BASE/MICROSOFT/ASP/ics_style.css
+++ b/SOURCE/LICS/BASE/MICROSOFT/ASP/ics_style.css
@@ -31,7 +31,7 @@ body {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;}
            MARGIN:0px;
            PADDING-BOTTOM:2px;PADDING-LEFT:2px;PADDING-RIGHT:2px;PADDING-TOP:2px;}
 .clsPopup {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:normal;
-           BACKGROUND-COLOR:#99ffcc;
+           BACKGROUND-COLOR:#ffff00;
            BORDER-STYLE:none;
            MARGIN:0px;
            PADDING-BOTTOM:2px;PADDING-LEFT:2px;PADDING-RIGHT:2px;PADDING-TOP:2px;}
