--- a/SOURCE/LICS/BASE/MICROSOFT/ASP/ics_style.css
+++ b/SOURCE/LICS/BASE/MICROSOFT/ASP/ics_style.css
@@ -254,8 +254,27 @@ body {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;}
 .clsListBX {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:bold;
             BACKGROUND-COLOR:#b0e0e6;COLOR:#000000;
             CURSOR:pointer;TEXT-DECORATION:none;TEXT-TRANSFORM:none;}
+.clsTreeBB {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:bold;
+             BACKGROUND-COLOR:transparent;COLOR:#000000;
+             CURSOR:pointer;TEXT-DECORATION:none;TEXT-TRANSFORM:none;}
+.clsTreeBN {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:normal;
+             BACKGROUND-COLOR:transparent;COLOR:#000000;
+             CURSOR:pointer;TEXT-DECORATION:none;TEXT-TRANSFORM:none;}
+.clsTreeBBX {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:bold;
+             BACKGROUND-COLOR:#b0e0e6;COLOR:#000000;
+             CURSOR:pointer;TEXT-DECORATION:none;TEXT-TRANSFORM:none;}
+.clsTreeBNX {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:normal;
+             BACKGROUND-COLOR:#b0e0e6;COLOR:#000000;
+             CURSOR:pointer;TEXT-DECORATION:none;TEXT-TRANSFORM:none;}
+.clsTreeBBG {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:bold;
+             BACKGROUND-COLOR:#e9f9f9;COLOR:#000000;
+             CURSOR:pointer;TEXT-DECORATION:none;TEXT-TRANSFORM:none;}
+.clsTreeBNG {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:normal;
+             BACKGROUND-COLOR:#e9f9f9;COLOR:#000000;
+             CURSOR:pointer;TEXT-DECORATION:none;TEXT-TRANSFORM:none;}
 .clsHeading {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:10pt;FONT-WEIGHT:bold;BACKGROUND-COLOR:transparent;COLOR:#000000;}
 .clsSubHeading {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:bold;BACKGROUND-COLOR:transparent;COLOR:#000000;}
+.clsFunction {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:12pt;FONT-WEIGHT:bold;BACKGROUND-COLOR:transparent;COLOR:#000000;}
 .clsNormal {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:normal;BACKGROUND-COLOR:transparent;COLOR:#000000;}
 .clsError {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:normal;BACKGROUND-COLOR:transparent;COLOR:#ff0000;}
 .clsWorking {FONT-FAMILY:Arial,Verdana,Tahoma,sans-serif;FONT-SIZE:9pt;FONT-WEIGHT:normal;BACKGROUND-COLOR:transparent;COLOR:#0000ff;}
