* Monitor detail view reprocess dialog fixes * Flushing cache now also calls dbms_session.reset_package * Added label/value columns to interface error table

--- a/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Views/Admin/FlushCache.cshtml
+++ b/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Views/Admin/FlushCache.cshtml
@@ -5,6 +5,9 @@
 <p>
     The File Loader Utility application cache has been flushed.
 </p>
+<p>
+    And dbms_session.package_reset has been called on the Oracle session.
+</p>
 <br />
 <br />
 <br />
