* Select all checkbox for reprocessing column on monitor list page * Increased per-page options in monitor list page to 250 results per page.

--- a/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Content/Site.css
+++ b/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Content/Site.css
@@ -742,10 +742,16 @@ pre.colcount
     padding: 0px;
 }
 
-.reprocessButton
+.footerOptions
 {
     float:right;
-    margin-top:-23px;
+    position:relative;
+    top:-23px;
+}
+.footerOptions input 
+{
+    position:relative;
+    top:2px;
 }
 
 .tick 
