--- a/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Views/Monitor/View.cshtml
+++ b/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Views/Monitor/View.cshtml
@@ -359,11 +359,20 @@
                     }
                 });
             });
-            
+
             // Document ready actions
             @if (ViewBag.Connection != null)
             {
-                @:loadRowData();
+                <text>
+                $("#perPage li").click(function () {
+                    $("#perPage li").removeClass("option-selected");
+                    $(this).addClass("option-selected");
+                    $("#RowDataTableContainer").jtable("option", "pageSize", $(this).text());
+                    loadRowData();
+                });
+
+                loadRowData();
+                </text>
             }
         });
 
@@ -622,6 +631,17 @@
     </div>
 
     <h3>Row Data</h3>
+
+    <div id="perpage-panel">
+        <h4>Results per Page:</h4>
+        <ul class="option-group" id="perPage">
+            <li class="option-selected">15</li>
+            <li>25</li>
+            <li>50</li>
+            <li>100</li>
+            <li>250</li>
+        </ul>
+    </div>
 
     <div id="jtable-result-count" class="errorcount-panel"></div>
     @if (Model.Record.RowErrorCount > 0)
