--- a/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Content/SiteIE8.css
+++ b/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Content/SiteIE8.css
@@ -24,3 +24,7 @@ input.date
     border-radius: 0px;
     behavior: url(/scripts/PIE.htc);
 }
+#TableContainer thead tr th:first-child +th+th+th+th+th+th+th+th+th+th+th+th
+{
+    border-right: 1px solid #d8d8d8;
+}
